--- a/index.html
+++ b/index.html
@@ -24,14 +24,49 @@
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html, body { margin:0; padding:0; overflow:hidden; height:100%; width:100%; }
+    html, body {
+      margin:0;
+      padding:0;
+      /* Pozwól na przewijanie, by ukryte obszary były dostępne */
+      overflow:auto;
+      height:100%;
+      width:100%;
+    }
     body { font-family:'Lato',sans-serif; background:#eef2f9; }
-    .game-container { position:absolute; inset:0; display:flex; flex-direction:column; align-items:center; padding:1rem; }
+    .game-container {
+      position:relative;
+      /* dopasuj zawartość do wielkości iframe/slajdu */
+      width:100%;
+      height:100%;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      padding:1rem;
+      overflow:auto;
+    }
     .header { text-align:center; margin-bottom:1rem; }
-    #map-wrapper { position:relative; flex:1; width:100%; touch-action:none; overflow:hidden; }
-    #map-image, #marker-container { position:absolute; top:0; left:0; will-change:transform; }
-    #map-image { user-select:none; touch-action:none; }
-    .marker, .country-label { position:absolute; transform-origin:top left; }
+    #map-wrapper {
+      position:relative;
+      flex:1;
+      width:100%;
+      /* Pozwól przewijać mapę, jeśli jest większa niż kontener */
+      overflow:auto;
+      touch-action:none;
+    }
+    #map-image, #marker-container {
+      position:absolute;
+      top:0;
+      left:0;
+      will-change:transform;
+    }
+    #map-image {
+      user-select:none;
+      touch-action:none;
+    }
+    .marker, .country-label {
+      position:absolute;
+      transform-origin:top left;
+    }
     .marker { width:35px; height:35px; border-radius:50%; display:flex; align-items:center; justify-content:center; color:white; font-weight:bold; }
     .marker.correct { background:rgba(22,163,74,0.9); border:3px solid white; box-shadow:0 2px 8px rgba(0,0,0,0.3); }
     .marker.incorrect { background:rgba(220,38,38,0.9); border:3px solid white; box-shadow:0 2px 8px rgba(0,0,0,0.3); animation:fadeOut 1s forwards; }
